feat: Add dates in transaction and mcp controller
